--- a/P1.ipynb
+++ b/P1.ipynb
@@ -722,7 +722,15 @@
     "\n",
     "Congratulations on finding the lane lines!  As the final step in this project, we would like you to share your thoughts on your lane finding pipeline... specifically, how could you imagine making your algorithm better / more robust?  Where will your current algorithm be likely to fail?\n",
     "\n",
-    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!\n"
+    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!\n",
+    "\n",
+    "I think, the main problem in this task can be assosiated with different light conditions and colour variations of lines. Altitude variations along the road and sharp curvature (turns) can also be challenging.\n",
+    "Possible improvements:\n",
+    "Adaptive brightness normalisation and different image preprocessing for shaded areas.\n",
+    "\"Dilation then erosion\" approach in order to have better line's pixels extraction for Hough line detection\n",
+    "Use narrower ROI (for example, do not use central part of the road).\n",
+    "Use not linear approximation of lane in order to fit curves\n",
+    "\n"
    ]
   },
   {
